# dave

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: .pending-auth-captures.jsonl  HANDOFF.json
dave/: __init__.py  crawl.py  leads.py  plugins.py  recipes.py
dave/antibot/: __init__.py  proxies.py  stealth.py
dave/cache/: __init__.py  store.py
dave/cli/: __init__.py  main.py
dave/core/: __init__.py  config.py  engine.py  errors.py
dave/extractors/: __init__.py  chunking.py  confidence.py  llm.py  schema.py  vision.py
dave/fetchers/: __init__.py  base.py  file.py  http.py  playwright.py  robots.py  stealth.py
dave/monitoring/: __init__.py  costs.py  logging.py
dave/queue/: __init__.py  manager.py
dave/search/: __init__.py  base.py  duckduckgo.py
docs/: configuration.md  extraction.md  fetchers.md  plugins.md  production.md  quickstart.md  recipes.md  search.md
examples/: competitor_intel.py  content_extraction.py  lead_research.py  pricing_monitor.py  search_and_extract.py
tests/: test_antibot.py  test_cache.py  test_chunking.py  test_crawl.py  test_differentiators.py  test_engine.py  test_extractors.py  test_fetchers.py  test_file_fetcher.py  test_leads.py  test_providers.py  test_robots.py  test_search.py  test_stealth.py  test_vision.py
