[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dave-ai"
version = "0.1.4"
description = "DAVE, Data Acquisition and Validation Engine for production AI-powered scraping"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DAVE contributors" }]
keywords = ["scraping", "ai", "llm", "pydantic", "playwright", "extraction", "firecrawl", "crawl4ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
playwright = ["playwright>=1.44"]
stealth = ["playwright>=1.44"]
pdf = ["pypdf>=4.0"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/workwithlos-ui/dave"
Repository = "https://github.com/workwithlos-ui/dave"
Issues = "https://github.com/workwithlos-ui/dave/issues"

[project.scripts]
dave = "dave.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["dave"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]
